# Nautilus

./: .gitignore  .gitmodules  .zenodo.json  CITATION.cff  LICENSE  LICENSE-QCDA  README.md  citation.bib  mathjax_support.html
.github/: FUNDING.yml
.github/workflows/: fh.yml  main.yml  update-metadata.yml  zenodo-release.yml
BlueTeam/OpenSSH/: configure~
BlueTeam/OpenSSL/: Qompass.md  build.zig.zon  installdata.pm  qompass-oqs.md
BlueTeam/OpenSSL-3.3.1/: builddata.pm  libcrypto.ld  libssl.ld  libssl.pc  libssl.so.3
BlueTeam/QompaSSL/: 2.1.sh  332.sh  Makefile  Makefile.in  OpenSSLConfig.cmake  QompaSSL.cnf  README.md  arch.sh  build.zig  build.zig_backup  builddata.pm  buildliboqs.sh  configdata.pm  installdata.pm  keydemo.sh  libcrypto.pc  libssl.pc  libssl.so.3  openssl.pc  pod2htmd.tmp  qompass-oqs.md  release.sh  test_results.txt  test_results81824.txt  ubuntu.sh  zig.build
BlueTeam/forte/: .envrc  .gitignore  Cargo.toml  Cross.toml  README.md  Rocket.toml.dist  build.rs  build_forte.sh  clippy.toml  forte-routes.conf  make-translated-templates  nginx.conf  shell.nix
BlueTeam/forte/.cargo/: config.toml
BlueTeam/forte/.tx/: config
BlueTeam/forte/contrib/: forte-daily-backup  forte@.service
BlueTeam/forte/database/: Cargo.toml
BlueTeam/forte/database/src/: fs.rs  lib.rs  openpgp_utils.rs  stateful_tokens.rs  sync.rs  test.rs  types.rs  wkd.rs
BlueTeam/forte/forte-container/: Makefile  README.md
BlueTeam/forte/forte-verifier/: Pipfile  README.md  hv.py
BlueTeam/forte/fortectl/: Cargo.toml  Rocket.toml
BlueTeam/forte/fortectl/src/: import.rs  main.rs  regenerate.rs
BlueTeam/forte/po/forte/: ar.po  de.po  en.po  es.po  forte.pot  fr.po  it.po  ja.po  ko.po  nb.po  nl.po  pl.po  ro.po  ru.po  sv.po  tr.po  zh_Hans.po
BlueTeam/forte/src/: anonymize_utils.rs  counters.rs  delete.rs  dump.rs  gettext_strings.rs  i18n.rs  i18n_helpers.rs  mail.rs  main.rs  rate_limiter.rs  sealed_state.rs  template_helpers.rs  tokens.rs
BlueTeam/forte/src/web/: debug_web.rs  hkp.rs  maintenance.rs  manage.rs  mod.rs  vks.rs  vks_api.rs  vks_web.rs  wkd.rs
BlueTeam/forte/templates-translated/ar/about/: about.html.hbs  faq.html.hbs  news.html.hbs  privacy.html.hbs  stats.html.hbs  usage.html.hbs
BlueTeam/forte/templates-translated/ca/about/: about.html.hbs  faq.html.hbs
BlueTeam/forte/templates-translated/de/about/: about.html.hbs  faq.html.hbs  news.html.hbs  privacy.html.hbs  stats.html.hbs  usage.html.hbs
BlueTeam/forte/templates-translated/es/about/: about.html.hbs  privacy.html.hbs  usage.html.hbs
BlueTeam/forte/templates-translated/fr/about/: about.html.hbs  faq.html.hbs  news.html.hbs  privacy.html.hbs  stats.html.hbs  usage.html.hbs
BlueTeam/forte/templates-translated/it/about/: about.html.hbs  faq.html.hbs  privacy.html.hbs  stats.html.hbs  usage.html.hbs
BlueTeam/forte/templates-translated/ja/about/: privacy.html.hbs
BlueTeam/forte/templates-translated/ko/about/: about.html.hbs  faq.html.hbs  news.html.hbs  privacy.html.hbs  stats.html.hbs  usage.html.hbs
BlueTeam/forte/templates-translated/nb/about/: about.html.hbs  stats.html.hbs
BlueTeam/forte/templates-translated/nl/about/: about.html.hbs  faq.html.hbs  privacy.html.hbs  stats.html.hbs
BlueTeam/forte/templates-translated/ro/about/: about.html.hbs  faq.html.hbs  news.html.hbs  privacy.html.hbs  stats.html.hbs  usage.html.hbs
BlueTeam/forte/templates-translated/ru/about/: about.html.hbs
BlueTeam/forte/templates-translated/sv/about/: about.html.hbs  privacy.html.hbs  usage.html.hbs
BlueTeam/forte/templates-translated/tr/about/: about.html.hbs  faq.html.hbs  privacy.html.hbs  stats.html.hbs  usage.html.hbs
BlueTeam/forte/templates-translated/zh_Hans/about/: about.html.hbs  stats.html.hbs  usage.html.hbs
BlueTeam/forte/templates-untranslated/about/: about.html.hbs  faq.html.hbs  news.html.hbs  privacy.html.hbs  stats.html.hbs  template-prefix  template-suffix  usage.html.hbs
BlueTeam/forte/wkd-domain-checker/: requirements.txt  wkd-domain-checker.py  wkd-domain-checker.service
BlueTeam/rocket_i18n/: Cargo.toml
Cloudflare/cloudflared/: README.md  cfsetup.yaml
Open-Quantum-Safe/liboqs/: CPackConfig.cmake  CPackSourceConfig.cmake  install_manifest.txt
OpenSSL-3.3.1/: Makefile.in  config_opts  configdata.pm  libcrypto.pc  openssl.pc  pod2htmd.tmp
OpenSSL-3.3.1/apps/: openssl  openssl-bin-cmp.d  openssl-bin-dhparam.d  openssl-bin-dsa.d  openssl-bin-kdf.d  openssl-bin-openssl.d  openssl-bin-pkcs12.d  openssl-bin-prime.d  openssl-bin-rehash.d  openssl-bin-s_client.d  openssl-bin-sess_id.d  openssl-bin-smime.d  openssl-bin-spkac.d  oqs_openssl.cnf
OpenSSL-3.3.1/crypto/: ca_internals_test-bin-ctype.d  libcrypto-lib-core_namemap.d  libcrypto-lib-der_writer.d  libcrypto-lib-getenv.d  libcrypto-lib-info.d  libcrypto-lib-mem.d  libcrypto-lib-o_str.d  libcrypto-lib-params.d  libcrypto-lib-provider_conf.d  libcrypto-lib-provider_core.d  libcrypto-lib-sleep.d  libcrypto-lib-threads_win.d  libcrypto-shlib-cryptlib.d  libcrypto-shlib-ex_data.d  libcrypto-shlib-mem.d  libcrypto-shlib-o_str.d  libcrypto-shlib-packet.d  libcrypto-shlib-params.d  libcrypto-shlib-params_from_text.d  libcrypto-shlib-provider_core.d  libcrypto-shlib-threads_none.d  libcrypto-shlib-trace.d  libfips-lib-core_namemap.d  libfips-lib-der_writer.d  libfips-lib-ex_data.d  (+5 more)
PenTesting/: README.md
RedTeam/: README.md
classic_mceliece/: build
liboqs/: .ninja_log
openssh-portable/: sshd-session
(+11141 files in other folders)
