[package]
name = "forte"
version = "1.0.0"
authors = ["Matt A. Porter <map@qompass.ai>"]
build = "build.rs"
default-run = "forte"
edition = "2021"

[workspace]
members = [
    "database",
    "fortectl",
]

[dependencies]
forte-database = { path = "database", features = ["postgres"] }
chrono = "0.4"
anyhow = "1.0"

# Use Rocket 0.5.0-rc.2
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["handlebars"] }

# Replace rocket_i18n with i18n-embed
i18n-embed = "0.13"
fluent = "0.16"
unic-langid = { version = "0.9", features = ["macros"] }

# Other dependencies
sequoia-openpgp = { version = "1.21.2", default-features = false, features = ["crypto-nettle"] }
multipart = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.5"
structopt = "0.3"
url = "2.3"
handlebars = "4.3"
num_cpus = "1.15"
cudarc = { version = "0.12.1", features = ["cuda-12060"] }
tch = { version = "0.13.0", features = ["download-libtorch"] }
pyo3 = { version = "0.19.0", features = ["extension-module"] }
rust-gpu-tools = "0.7.0"
ring = "0.16"
base64 = "0.21"
uuid = { version = "1.3", features = ["v4"] }
rocket_prometheus = "0.10.0-rc.2"
lazy_static = "1.4"
gettext-macros = "0.6"
gettext-utils = "0.1"
gettext = "0.4"
glob = "0.3"
rfc2047 = "0.1"
hyperx = "1.4"
oqs = "0.9.0"

# Hugo-related dependencies
walkdir = "2.3"
notify = "5.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.28", features = ["full"] }
scraper = "0.16"
html5ever = "0.26"

[dependencies.lettre]
version = "0.10"
default-features = false
features = ["builder", "file-transport", "sendmail-transport"]

[build-dependencies]
vergen = "7"

[dev-dependencies]
regex = "1"

[[bin]]
name = "forte"
path = "src/main.rs"

[[bin]]
name = "forte-delete"
path = "src/delete.rs"

