[package]
name = "forte-database"
version = "1.1.0"
authors = ["Matt A. Porter <map@qompass.ai>"]
edition = "2021"
rust-version = "1.65"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.0", features = ["chrono", "r2d2", "uuid", "postgres"] } 
diesel_migrations = "2.0"
dotenv = "0.15"
fs2 = "0.4"                          
hex = "0.4"                          
idna = "0.2"                         
lazy_static = "1.4"
log = "0.4"
pathdiff = "0.2"                     
rand = "0.8"                         
r2d2 = "0.8"
sequoia-openpgp = { version = "1.21.2", default-features = false, features = ["crypto-nettle"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.5"                     
thiserror = "1.0"
time = "0.3"                         
url = "2.3"                          
uuid = { version = "1.3", features = ["v4", "serde"] }
walkdir = "2.3"                      
zbase32 = "0.1.2"                      

[features]
default = ["postgres"]
postgres = ["diesel/postgres"]
sqlite = ["diesel/sqlite"]
mysql = ["diesel/mysql"]

